# minizip

./: Android.mk  CMakeLists.txt  ioandroid.c  ioandroid.h  ioapi.c  ioapi.h  mz_os_posix.c  mz_os_posix.h  mz_strm_android.c
src/: mz_os_posix.c  mz_os_posix.h
